--- a/src/content/projects/pulse_lang.mdx
+++ b/src/content/projects/pulse_lang.mdx
@@ -1,7 +1,7 @@
 ---
-title: Spectre
+title: Pulse
 date: 12-29-2024
-description: Spectre is a terminal-inspired theme for Astro, built using Astro and TypeScript.
+description: Pulse is an under developement Programming language
 image: ../assets/spectre.png
 info:
   - text: GitHub
