--- a/src/content/projects/pulse_lang.mdx
+++ b/src/content/projects/pulse_lang.mdx
@@ -11,4 +11,4 @@ info:
       name: github
 ---
 
-Pulse is an under developement programming language.
+Pulse is an under developement programming language, made to allow everybody to write complex programms in a simple and fast maner.
