--- a/src/content/projects/pulse_lang.mdx
+++ b/src/content/projects/pulse_lang.mdx
@@ -1,7 +1,7 @@
 ---
-title: Pulse
+title: test
 date: 12-29-2024
-description: Pulse is an under developement Programming language
+description: test
 image: ../assets/spectre.png
 info:
   - text: GitHub
@@ -11,4 +11,4 @@ info:
       name: github
 ---
 
-Pulse is an under developement programming language, made to allow everybody to write complex programms in a simple and fast maner.
+this is a test
