Aktualisierung vieler Daten

--- a/src/content/other/about.mdx
+++ b/src/content/other/about.mdx
@@ -1,2 +1,9 @@
-Hello,
-my name is Florian. I am a student from Germany who is interested ind Programming, ai, crypto and a lot more.
+#Algemeines
+Hallo,
+mein Name ist Florian. Ich bin 18 Jahre alt und mache Aktuell mein Abitur an einem Berufskolleg.
+Ich interessiere mich sehr für Themen rund um die Programmierung, KI und Kryptowährungen.
+Mit diesen Themen beschäftige ich mich besonders in meiner Freien Zeit.
+Zudem begeistere ich mich sehr für Cumputerspiele in welche ich ebenfalls viel Zeit stecke.
+Ein weiteres interesse von mir ist Linux. Ich versuche immer wieder noch mehr aus meinem System herauszuholen und schrecke auch vor komplexeren Distributionen nicht zurück.
+Zudem höre ich gerne Musik. Dabei hängt mein Musikgeschmack immer von dem Jeweiligen Lied ab. 
+Von Heavy Metal (z.B. Kingslayer - Bring me the Horizon und Babymetal) bis hin zu Glitchhop (TheFatRat) höre ich so gut wie alles.
