--- a/src/content/projects/test.mdx
+++ b/src/content/projects/test.mdx
@@ -1,6 +1,6 @@
 ---
 title: test
-date: 12-29-2024
+date: 06-24-2025
 description: test
 image: ../assets/spectre.png
 info:
@@ -11,4 +11,4 @@ info:
       name: github
 ---
 
-This is a placeholder for Astro to work properly
+Dies ist ein Plazhalter damit Astro funktioniert.
